added sign in and sign up forms

--- a/public/signInForm.html
+++ b/public/signInForm.html
@@ -19,8 +19,8 @@
       <div class="nav-wrapper container">
         <a href="#" class="brand-logo">BrandName</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="./public/signInForm.html">Sign In</a></li>
-          <li class="active"><a href="/">sign Up</a></li>
+          <li class="active"><a href="./signInForm.html">Sign In</a></li>
+          <li><a href="/">Sign Up</a></li>
         </ul>
       </div>
     </nav>
@@ -28,6 +28,6 @@
       <form action=""></form>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./js/signUp.js"></script>
+    <script src="../js//signIn.js"></script>
   </body>
 </html>
